[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code_challenge_helper"
version = "0.1.0"
authors = [
    {name = "Roberto Luis de Jesus Santos Junior", email = "contato.robertoluis@gmail.com"},
]
description = "Ferramenta para criar estrutura de pastas para estudos de desafios de código"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "InquirerPy>=0.3.4",
]

[project.scripts]
challenge-helper = "code_challenge_helper.cli:main"

[tool.setuptools]
include-package-data = true